docs/original_moodle/unidades/entregas/todas/1/Tarea 1 - Ejercicio 8  - Casa de Cambio Tio Rico VPL/Quintero Reyes Johnny Alexander 1893/2019-08-22-15-16-52.ceg/compilation.txt
CasaDeCambioTest.java:51: error: incompatible types: possible lossy conversion from double to float
        float result = instance.getGananciaEnUnBolivar();
                                                      ^
1 error
Not compiled
